syntax = "proto3";

package go.micro.srv.textanalyzer;

service TextAnalyzer {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Health(HealthRequest) returns (HealthResponse) {}
}

message CreateRequest {
  string index = 1;
  string id = 2;
}

message CreateResponse {
  string info = 1;
}

message HealthRequest {
  string type = 1;
}

message HealthResponse {
  int64 status = 1;
  string info = 2;
}
